# semantic-kernel

./: CONTRIBUTING.md  README.md  pyproject.toml
python/: .env.example  .example.settings.yaml  pyproject.toml
python/semantic_kernel/: __init__.py  constants.py  kernel.py  kernel_exception.py  logging_.py  pydantic_.py  serialization.py  settings.py
python/semantic_kernel/connectors/ai/: chat_completion_client_base.py  chat_request_settings.py  complete_request_settings.py  (+1 more)
python/semantic_kernel/core_skills/: conversation_summary_skill.py  file_io_skill.py  http_skill.py  math_skill.py  text_memory_skill.py  text_skill.py  time_skill.py
python/semantic_kernel/memory/: memory_query_result.py  memory_record.py  memory_store_base.py  semantic_text_memory.py  semantic_text_memory_base.py  volatile_memory_store.py
python/semantic_kernel/optional_packages/: __init__.py  chromadb.py  sentence_transformers.py  torch.py  transformers.py
python/semantic_kernel/orchestration/: context_variables.py  delegate_handlers.py  delegate_inference.py  sk_context.py  sk_function.py  sk_function_base.py
python/semantic_kernel/planning/: basic_planner.py  plan.py
python/semantic_kernel/reliability/: pass_through_without_retry.py  retry_mechanism_base.py
python/semantic_kernel/semantic_functions/: chat_prompt_template.py  prompt_template.py  prompt_template_base.py  prompt_template_config.py  semantic_function_config.py
python/semantic_kernel/skill_definition/: function_view.py  functions_view.py  parameter_view.py  read_only_skill_collection.py  sk_function_decorator.py  skill_collection.py  skill_collection_base.py
python/semantic_kernel/template_engine/: code_tokenizer.py  prompt_template_engine.py  template_tokenizer.py
python/semantic_kernel/utils/: code.py  null_logger.py  openai_.py
python/tests/: conftest.py
python/tests/e2e/: tests.py
python/tests/end-to-end/: chat.py  memory.py
python/tests/unit/: test_pyproject.py  test_serialization.py  test_settings.py
(+53 files in other folders)
