[tool.poetry]
name = "semantic-kernel"
version = "0.3.1.dev"
description = ""
authors = ["Microsoft <SK-Support@microsoft.com>"]
readme = "pip/README.md"
packages = [{include = "semantic_kernel"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
openai = "^0.27.0"
aiofiles = "^23.1.0"
python-dotenv = "1.0.0"
pydantic = "^1.10.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"
black = {version = "23.3.0", allow-prereleases = true}
ipykernel = "^6.21.1"
papermill = "2.4.0"
pytest = "7.3.2"
pytest-asyncio = "0.21.0"
pytest-mock = {version = "^3.11.1"}
ruff = "0.0.272"
toml = "0.10.2"

[tool.poetry.group.hugging_face.dependencies]
transformers = "^4.28.1"
sentence-transformers = "^2.2.2"
torch = "2.0.1"

[tool.poetry.group.chromadb.dependencies]
chromadb = "^0.3.23"


[tool.poetry.group.weaviate.dependencies]
weaviate-client = "^3.18.0"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
